@@ -1,3 +1,7 @@
+2004-03-10  Ulrich Drepper  <drepper@redhat.com>
+
+	* posix/getopt.c (_): Don't define here for glibc.
+
 2004-03-10  Jakub Jelinek  <jakub@redhat.com>
 
 	* include/libc-symbols.h [__ASSEMBLY__] (compat_text_section,
